Planos didaticos 2024-1 e Material de Python do Prof. Zanoni (UNICAMP).

--- a/gsi526-lab.html
+++ b/gsi526-lab.html
@@ -68,7 +68,7 @@
 			</nav>
 			<div class="page-title">
 				<img src="images/person_1.jpg" alt="Free HTML5 by FreeHTMl5.co">
-				<span>Disciplinas 2º Semestre de 2023 - Engenharia de Computação</span>
+				<span>Disciplinas 1º Semestre de 2024 - Engenharia de Computação</span>
 				<h2>Engenharia de Software I Lab.</h2>
 				<!--<span>Prof. Dr. Eduardo Cunha Campos</span>-->
 			</div>
@@ -79,7 +79,7 @@
 					<div>
 					<b>Plano e Grupos do Trabalho:</b>
 					<ul>
-					<li><i class="icon-book"></i><a href="aulas/lab-programacao/Plano Didático - ES_LAB.pdf"> Plano Didático <img src="images/new2.gif" alt="" height="11" width="28"></a></li>
+					<li><i class="icon-book"></i><a href="aulas/lab-programacao/Plano-Didatico-LAB-ES-2024.pdf"> Plano Didático <img src="images/new2.gif" alt="" height="11" width="28"></a></li>
 					<li><i class="icon-book"></i><a href="aulas/lab-programacao/grupos_dos_trabalhos.pdf"> Relação dos Grupos <img src="images/new2.gif" alt="" height="11" width="28"></a></li>
 					<li><i class="icon-book"></i><a href="aulas/lab-programacao/Roteiro_Trabalho2.pdf"> Roteiro de Avaliação do Trabalho 2 <img src="images/new2.gif" alt="" height="11" width="28"></a></li>
 					<!--<li><i class="icon-book"></i><a href="aulas/lab-programacao/grupos_apresentacao.pdf"> Ordem de Apresentação dos Grupos <img src="images/new2.gif" alt="" height="11" width="28"></a>--></li>
