--- a/gsi526.html
+++ b/gsi526.html
@@ -68,7 +68,7 @@
 			</nav>
 			<div class="page-title">
 				<img src="images/person_1.jpg" alt="Free HTML5 by FreeHTMl5.co">
-				<span>Disciplinas 2º Semestre de 2023 - Engenharia de Computação</span>
+				<span>Disciplinas 1º Semestre de 2024 - Engenharia de Computação</span>
 				<h2>Engenharia de Software I</h2>
 				<!--<span>Prof. Dr. Eduardo Cunha Campos</span>-->
 			</div>
@@ -79,7 +79,7 @@
 					<div>
 					<b>Plano e Temas:</b>
 					<ul>
-					<li><i class="icon-book"></i><a href="aulas/gsi526/Plano Didático - ES.pdf"> Plano Didático <img src="images/new2.gif" alt="" height="11" width="28"></a></li>
+					<li><i class="icon-book"></i><a href="aulas/gsi526/Plano-Didático-ES-2024.pdf"> Plano Didático <img src="images/new2.gif" alt="" height="11" width="28"></a></li>
 					<!--<li><i class="icon-book"></i><a href="aulas/gsi526/temas_TCC_eduardo_2023-1.pdf"> Temas de TCC (2023.1)</a> <img src="images/new2.gif" alt="" height="11" width="28"></li>-->
 					<!--<li><i class="icon-book"></i><a href="aulas/gsi526/agenda_atendimento_TCC.pdf"> Horário de Atendimento TCC (2023.1)</a> <img src="images/new2.gif" alt="" height="11" width="28"></li>-->
 					<!--<li><i class="icon-book"></i><a href="aulas/gsi526/EQUALIZACAO_CURRICULAR_COMPUTACAO.pdf"> Equalização Curricular - Área de Computação</a> <img src="images/new2.gif" alt="" height="11" width="28"></li>-->
@@ -88,9 +88,9 @@
 					<div>
 					<b>Avaliação:</b>
 					<ul>
-					<li>Prova 1 - 30 pts <b>(04/09)</b> <img src="images/new2.gif" alt="" height="11" width="28"> - <i> Aulas 01, 02, 03, 04 e 05</i></li>
-					<li>Prova 2 - 30 pts <b>(23/10)</b> <img src="images/new2.gif" alt="" height="11" width="28"> - <i> Aulas 06, 07, 08, 09 e 10</i></li>
-					<li>Prova 3 - 30 pts <b>(04/12)</b> <img src="images/new2.gif" alt="" height="11" width="28"> - <i> Aulas 11, 12, 13, 14, 15 e 16</i></li>
+					<li>Prova 1 - 30 pts <b>(04/09)</b> <img src="images/new2.gif" alt="" height="11" width="28">  <!-- <i> Aulas 01, 02, 03, 04 e 05 </i>--></li>
+					<li>Prova 2 - 30 pts <b>(23/10)</b> <img src="images/new2.gif" alt="" height="11" width="28">  <!-- <i> Aulas 06, 07, 08, 09 e 10</i>--></li>
+					<li>Prova 3 - 30 pts <b>(04/12)</b> <img src="images/new2.gif" alt="" height="11" width="28">  <!-- <i> Aulas 11, 12, 13, 14, 15 e 16 </i>--></li>
 					<li>Lista 1 - 2 pts <b>(04/09)</b> <!--<img src="images/deadline.png"" alt="" height="25" width="19">--></li>
 					<li>Lista 2 - 4 pts <b>(23/10)</b> <!--<img src="images/deadline.png"" alt="" height="25" width="19">--></li>
 					<li>Lista 3 - 4 pts <b>(04/12)</b> <!--<img src="images/new2.gif" alt="" height="11" width="28">--></li>
