--- a/poo.html
+++ b/poo.html
@@ -68,7 +68,7 @@
 			</nav>
 			<div class="page-title">
 				<img src="images/person_1.jpg" alt="Free HTML5 by FreeHTMl5.co">
-				<span>Disciplinas 2º Semestre de 2023 - Engenharia Elétrica</span>
+				<span>Disciplinas 1º Semestre de 2024 - Engenharia Elétrica</span>
 				<h2>Programação de Computadores 2</h2>
 				<!--<span>Prof. Dr. Eduardo Cunha Campos</span>-->
 			</div>
@@ -79,7 +79,7 @@
 					<div>
 					<b>Plano e Material extra:</b>
 					<ul>
-					<li><i class="icon-book"></i><a href="aulas/poo/Plano Didático - PC2.pdf"> Plano Didático <img src="images/new2.gif" alt="" height="11" width="28"></a></li>
+					<li><i class="icon-book"></i><a href="aulas/poo/Plano-Didatico-PC2-2024.pdf"> Plano Didático <img src="images/new2.gif" alt="" height="11" width="28"></a></li>
 					<li><i class="icon-book"></i><a href="aulas/poo/caelum_java.pdf"> Apostila Caelum Java <img src="images/new2.gif" alt="" height="11" width="28"></a></li>
 					<li><i class="icon-book"></i><a href="http://www.decom.ufop.br/romildo/bcc221.2011-1/slides/cap14.pdf"> <i>Livro: Java Como Programar 8ª edição (Deitel)</i></a> <img src="images/new2.gif" alt="" height="11" width="28"></li>
 					<li><i class="icon-book"></i><a href="aulas/poo/Tutorial-AutoProctor.pdf"> <i>Tutorial de como usar a ferramenta AutoProctor</i></a> <img src="images/new2.gif" alt="" height="11" width="28"></li>
