--- a/gsi526-lab.html
+++ b/gsi526-lab.html
@@ -90,15 +90,15 @@
 					<div>
 					<b>Avaliação:</b>
 					<ul>
-					<li>Roteiro prático - 30 pts <b>(08/11)</b> <i><a href="aulas/lab-programacao/Roteiro-Trabalho1.pdf"> - Especificação<i> [ <a href="aulas/lab-programacao/notas-detalhadas-roteiro.pdf"> <b>Notas</b> </a> ] <img src="images/new2.gif" alt="" height="11" width="28"></i></li>
-					<li>Trabalho 2 - 70 pts <b>(13/12)</b> <i><a href="aulas/lab-programacao/Trabalho2-LabES.pdf"> - Especificação <img src="images/new2.gif" alt="" height="11" width="28"></i></a></li>
+					<li>Roteiro prático - 30 pts <b>(05/06)</b> <i><a href="aulas/lab-programacao/Roteiro-Trabalho1.pdf"> - Especificação<i> [ <a href="aulas/lab-programacao/notas-detalhadas-roteiro.pdf"> <b>Notas</b> </a> ] <img src="images/new2.gif" alt="" height="11" width="28"></i></li>
+					<li>Trabalho 2 - 70 pts <b>(03/07)</b> <i><a href="aulas/lab-programacao/Trabalho2-LabES.pdf"> - Especificação <img src="images/new2.gif" alt="" height="11" width="28"></i></a></li>
 					<!--<li>Trabalho 3 - 30 pts <b>(01/09)</b> </li>
 					<li>Vídeo - 10 pts <b>(01/09)</b> <!--<img src="images/deadline.png"" alt="" height="25" width="19"></li> -->
 					<!--<li><i><a href="aulas/lab-programacao/Trabalho1-LabES.pdf"> Trabalho 1 - 30 pts</a></i> - <b>(Data de Entrega: 24/02)</b> <img src="images/deadline.png" alt="" height="25" width="19"></li>-->
 					<!--<li><i><a href="aulas/lab-programacao/Trabalho2-LabES.pdf"> Trabalho 2 - 70 pts</a></i> - <b>(Próxima Entrega: 28/07)</b> <img src="images/new2.gif" alt="" height="11" width="28"></li>-->
 					<ul>
-					<li><u>Fase 1:</u> Diagrama de Classes do Sistema - 15 pts <b>(22/11)</b> - <i><a href="aulas/lab-programacao/notas_trabalho2_fase1.pdf"> Notas </a> <img src="images/new2.gif" alt="" height="11" width="28"></i></li>
-					<li><u>Fase 2:</u> Apresentação do Sistema  - 55 pts <b>(13/12)</b> - <i><a href="aulas/lab-programacao/notas_fase_2.pdf"> Notas </a> <img src="images/new2.gif" alt="" height="11" width="28"></i></li> 
+					<!-- <li><u>Fase 1:</u> Diagrama de Classes do Sistema - 15 pts <b>(22/11)</b> - <i><a href="aulas/lab-programacao/notas_trabalho2_fase1.pdf"> Notas </a> <img src="images/new2.gif" alt="" height="11" width="28"></i>--></li>
+					<li><u>Apresentação do Sistema</u> - 55 pts <b>(13/12)</b> - <i><a href="aulas/lab-programacao/notas_fase_2.pdf"> Notas </a> <img src="images/new2.gif" alt="" height="11" width="28"></i></li> 
 					<!-- <li><i><a href="aulas/lab-programacao/notas_trabalho2_fase1.pdf"> Notas do Trabalho 2 (Fase 1)</a> <img src="images/new2.gif" alt="" height="11" width="28"></i></li> -->
 					</ul>
 					</ul> 
