--- a/poo-lab.html
+++ b/poo-lab.html
@@ -80,7 +80,8 @@
 					<div>
 					<b>Plano e Material extra:</b>
 					<ul>
-					<li><i class="icon-book"></i><a href="aulas/lab-poo/Plano-Didatico-PC2-LAB-2024.pdf"> Plano Didático <img src="images/new2.gif" alt="" height="11" width="28"></a></li>
+					<li><i class="icon-book"></i><a href="aulas/lab-poo/Plano-Didático-Lab. PC2-2024.1 - Turma 03.pdf"> Plano Didático - Turma 03 <img src="images/new2.gif" alt="" height="11" width="28"></a></li>
+					<li><i class="icon-book"></i><a href="aulas/lab-poo/Plano-Didático-Lab. PC2-2024.1 - Turma 04.pdf"> Plano Didático - Turma 04 <img src="images/new2.gif" alt="" height="11" width="28"></a></li>
 					<li><i class="icon-book"></i><a href="aulas/lab-poo/caelum_java.pdf"> Apostila Caelum Java <img src="images/new2.gif" alt="" height="11" width="28"></a></li>
 					<li><i class="icon-book"></i><a href="http://www.decom.ufop.br/romildo/bcc221.2011-1/slides/cap14.pdf"> <i>Livro: Java Como Programar 8ª edição (Deitel)</i></a> <img src="images/new2.gif" alt="" height="11" width="28"></li>
 					</ul>
