--- a/poo.html
+++ b/poo.html
@@ -79,7 +79,7 @@
 					<div>
 					<b>Plano e Material extra:</b>
 					<ul>
-					<li><i class="icon-book"></i><a href="aulas/poo/Plano-Didatico-PC2-2024.pdf"> Plano Didático <img src="images/new2.gif" alt="" height="11" width="28"></a></li>
+					<li><i class="icon-book"></i><a href="aulas/poo/Plano-Didático-PC2-2024.1.pdf"> Plano Didático <img src="images/new2.gif" alt="" height="11" width="28"></a></li>
 					<li><i class="icon-book"></i><a href="aulas/poo/caelum_java.pdf"> Apostila Caelum Java <img src="images/new2.gif" alt="" height="11" width="28"></a></li>
 					<li><i class="icon-book"></i><a href="http://www.decom.ufop.br/romildo/bcc221.2011-1/slides/cap14.pdf"> <i>Livro: Java Como Programar 8ª edição (Deitel)</i></a> <img src="images/new2.gif" alt="" height="11" width="28"></li>
 					<li><i class="icon-book"></i><a href="aulas/poo/Tutorial-AutoProctor.pdf"> <i>Tutorial de como usar a ferramenta AutoProctor</i></a> <img src="images/new2.gif" alt="" height="11" width="28"></li>
