Material de Python (Pc2 e lab. Pc2)

--- a/poo-lab-python.html
+++ b/poo-lab-python.html
@@ -68,7 +68,7 @@
 			</nav>
 			<div class="page-title">
 				<img src="images/person_1.jpg" alt="Free HTML5 by FreeHTMl5.co">
-				<span>Disciplinas 2º Semestre de 2023 - Engenharia Elétrica</span>
+				<span>Disciplinas 1º Semestre de 2024 - Engenharia Elétrica</span>
 				<h2>Programação de Computadores 2 Lab.</h2>
 				<!--<span>Prof. Dr. Eduardo Cunha Campos</span>-->
 			</div>
@@ -86,27 +86,27 @@
 					<li><i class="icon-book"></i><a href="http://www.decom.ufop.br/romildo/bcc221.2011-1/slides/cap14.pdf"> <i>Livro: Java Como Programar 8ª edição (Deitel)</i></a> <img src="images/new2.gif" alt="" height="11" width="28"></li>
 					</ul>
 					</div>-->
-					<div>
+					<!--<div>
 					<b>Grupos dos Trabalhos e Roteiros:</b>
 					<ul>
 					<!--<li><i class="icon-book"></i><a href="aulas/lab-poo/monitoria_horario_pc2.pdf"> Horário de Monitoria</a> <img src="images/new2.gif" alt="" height="11" width="28">--></li>				
-					<li><i class="icon-book"></i><a href="aulas/lab-poo/grupos_dos_trabalhos.pdf"> Relação dos Grupos <img src="images/new2.gif" alt="" height="11" width="28"></a></li>
-					<li><i class="icon-book"></i><a href="aulas/lab-poo/trabalhos/Roteiro_Trabalho1.pdf"> Roteiro para Avaliação do Trabalho 1 <img src="images/deadline.png" alt="" height="25" width="19"></a></li>
-					<li><i class="icon-book"></i><a href="aulas/lab-poo/trabalhos/Roteiro_Trabalho2.pdf"> Roteiro para Avaliação do Trabalho 2 <img src="images/deadline.png" alt="" height="25" width="19"></a></li>
-					<li><i class="icon-book"></i><a href="aulas/lab-poo/trabalhos/Roteiro_Trabalho3.pdf"> Roteiro para Avaliação do Trabalho 3 <img src="images/new2.gif" alt="" height="11" width="28"></a></li>
+					<!--<li><i class="icon-book"></i><a href="aulas/lab-poo/grupos_dos_trabalhos.pdf"> Relação dos Grupos <img src="images/new2.gif" alt="" height="11" width="28"></a>--></li>
+					<!--<li><i class="icon-book"></i><a href="aulas/lab-poo/trabalhos/Roteiro_Trabalho1.pdf"> Roteiro para Avaliação do Trabalho 1 <img src="images/deadline.png" alt="" height="25" width="19"></a>--></li>
+					<!--<li><i class="icon-book"></i><a href="aulas/lab-poo/trabalhos/Roteiro_Trabalho2.pdf"> Roteiro para Avaliação do Trabalho 2 <img src="images/deadline.png" alt="" height="25" width="19"></a>--></li>
+					<!--<li><i class="icon-book"></i><a href="aulas/lab-poo/trabalhos/Roteiro_Trabalho3.pdf"> Roteiro para Avaliação do Trabalho 3 <img src="images/new2.gif" alt="" height="11" width="28"></a>--></li>
 					<!--<li><i class="icon-book"></i><a href="aulas/lab-poo/monitoria_entrevistas.pdf"> Horário das Entrevistas</a> <img src="images/new2.gif" alt="" height="11" width="28">--></li>
 					<!--<li><i class="icon-book"></i><a href="aulas/lab-poo/monitoria_resultados.pdf"> Resultados de Monitoria</a> <img src="images/new2.gif" alt="" height="11" width="28">--></li>				
 					<!--<li><i class="icon-book"></i><a href="aulas/lab-poo/grupos_pc2_apresentacao.pdf"> Ordem de Apresentação dos Grupos <img src="images/new2.gif" alt="" height="11" width="28"></a>--></li>
 					<!--<li><i class="icon-book"></i><a href="aulas/lab-poo/grupos_notas.pdf"> Notas dos Grupos <img src="images/new2.gif" alt="" height="11" width="28"></a></li>
-					</ul>-->
-					</div>				
+					</ul>
+					</div>-->			
 					<div>
 					<b>Avaliação:</b>
 					<ul>
-					<li>Trabalho 1 - 30 pts <b>(14/09)</b> <a href="aulas/lab-poo/trabalhos/Trabalho1-PC2.pdf"> - <i> Especificação </i> <img src="images/deadline.png" alt="" height="25" width="19"></a></li>
-					<li>Trabalho 2 - 30 pts <b>(26/10)</b> <a href="aulas/lab-poo/trabalhos/Trabalho2-PC2.pdf"> - <i> Especificação </i> <img src="images/deadline.png" alt="" height="25" width="19"></a></li>
-					<li>Trabalho 3 - 30 pts <b>(14/12)</b> <a href="aulas/lab-poo/trabalhos/Trabalho3-PC2.pdf"> - <i> Especificação </i> <img src="images/new2.gif" alt="" height="11" width="28"></a></li>
-					<li>Exercícios Práticos - 10 pts <!-- - Ex. 2, Ex. 3, Ex. 5 e Ex. 8<!--<a href="aulas/lab-poo/notas_exercicios.pdf"> - <i> Notas </i> <img src="images/new2.gif" alt="" height="11" width="28"></a>--></li>
+					<li>Trabalho 1 - 30 pts <b>(19/04)</b> <!--<a href="aulas/lab-poo/trabalhos/Trabalho1-PC2.pdf"> - <i> Especificação </i> <img src="images/deadline.png" alt="" height="25" width="19"></a>--></li>
+					<li>Trabalho 2 - 30 pts <b>(24/05)</b> <!--<a href="aulas/lab-poo/trabalhos/Trabalho2-PC2.pdf"> - <i> Especificação </i> <img src="images/deadline.png" alt="" height="25" width="19"></a>--></li>
+					<li>Trabalho 3 - 30 pts <b>(05/07)</b> <!--<a href="aulas/lab-poo/trabalhos/Trabalho3-PC2.pdf"> - <i> Especificação </i> <img src="images/new2.gif" alt="" height="11" width="28"></a>--></li>
+					<li>Exercícios Práticos - 10 pts <b>(07/06)</b> <!-- - Ex. 2, Ex. 3, Ex. 5 e Ex. 8<!--<a href="aulas/lab-poo/notas_exercicios.pdf"> - <i> Notas </i> <img src="images/new2.gif" alt="" height="11" width="28"></a>--></li>
 					<!--<li>Trabalho 1 - 30 pts <b>(Entrega: 18/02)</b> <a href="aulas/lab-poo/Trabalho1-PC2.pdf"> - <i> Especificação </i> <img src="images/deadline.png" alt="" height="25" width="19"></a></li> 
 					<li>Trabalho 2 - 30 pts <b>(Entrega: 18/03)</b> <a href="aulas/lab-poo/Trabalho2-PC2.pdf"> - <i> Especificação </i> <img src="images/new2.gif" alt="" height="11" width="28"></a></li> 
 					<li>Trabalho 3 - 30 pts <b>(Entrega: 08/04)</b> <a href="aulas/lab-poo/Trabalho3-PC2.pdf"> - <i> Especificação </i> <img src="images/new2.gif" alt="" height="11" width="28"></a></li> 
@@ -114,7 +114,7 @@
 					</ul>
 					</div> 
 					<div>					
-					<b>Material em Python:</b> 
+					<b>Material:</b> 
 					<ul>						
 					<li><i class="icon-book"></i><a href="aulas/lab-poo/python/Prática 1.pdf"> Exercício Prático 1</a></li>
 					<li><i class="icon-book"></i><a href="aulas/lab-poo/python/Prática 2.pdf"> Exercício Prático 2</a></li>			
@@ -124,7 +124,6 @@
 					<li><i class="icon-book"></i><a href="aulas/lab-poo/python/Prática 6.pdf"> Exercício Prático 6</a></li>
 					<li><i class="icon-book"></i><a href="aulas/lab-poo/python/Prática 7.pdf"> Exercício Prático 7</a></li>
 					<li><i class="icon-book"></i><a href="aulas/lab-poo/python/Prática 8.pdf"> Exercício Prático 8</a></li>
-					
 					</ul>
 					</div>
 					<!-- <div>
