--- a/poo-python.html
+++ b/poo-python.html
@@ -68,7 +68,7 @@
 			</nav>
 			<div class="page-title">
 				<img src="images/person_1.jpg" alt="Free HTML5 by FreeHTMl5.co">
-				<span>Disciplinas 2º Semestre de 2022 - Engenharia Elétrica</span>
+				<span>Disciplinas 1º Semestre de 2024 - Engenharia Elétrica</span>
 				<h2>Programação de Computadores 2</h2>
 			</div>
 		</div>
@@ -85,58 +85,36 @@
 					<div>
 					<b>Avaliação:</b>
 					<ul>
-					<li>Prova 1 - 25 pts <b>(13/09)</b> <!--<img src="images/new2.gif" alt="" height="11" width="28"> (<i> Aulas 01, 02, 03, 04 e 05 </i>)--></li>
-					<li>Prova 2 - 30 pts <b>(18/10)</b> <!--<img src="images/deadline.png" alt="" height="25" width="19"> (<i> Aulas 06, 07 e 08 </i>)--></li>
-					<li>Prova 3 - 30 pts <b>(06/12)</b> <!--<img src="images/new2.gif" alt="" height="11" width="28"> (<i> Aulas 09, 10, 11 e 12 </i>)--></li>
-					<li><a href="aulas/poo/backes/lista1_pc2.pdf"> Lista 01 - 7,5 pts <b>(18/10)</b> <img src="images/new2.gif" alt="" height="11" width="28"></a></li>
+					<li>Prova 1 - 30 pts <b>(09/04)</b> <!--<img src="images/new2.gif" alt="" height="11" width="28"> (<i> Aulas 01, 02, 03, 04 e 05 </i>)--></li>
+					<li>Prova 2 - 35 pts <b>(07/05)</b> <!--<img src="images/deadline.png" alt="" height="25" width="19"> (<i> Aulas 06, 07 e 08 </i>)--></li>
+					<li>Prova 3 - 35 pts <b>(18/06)</b> <!--<img src="images/new2.gif" alt="" height="11" width="28"> (<i> Aulas 09, 10, 11 e 12 </i>)--></li>
+					<!--<li><a href="aulas/poo/backes/lista1_pc2.pdf"> Lista 01 - 7,5 pts <b>(18/10)</b> <img src="images/new2.gif" alt="" height="11" width="28"></a></li>-->
 					<!--<li>Lista 01 - 7,5 pts <b>(18/10)</b></li>-->
 					<!--<li>Lista 02 - 7,5 pts <b>(06/12)</b></li>-->
-					<li><a href="aulas/poo/backes/lista2_pc2.pdf"> Lista 02 - 7,5 pts <b>(06/12)</b> <img src="images/new2.gif" alt="" height="11" width="28"></a></li>		
+					<!--<li><a href="aulas/poo/backes/lista2_pc2.pdf"> Lista 02 - 7,5 pts <b>(06/12)</b> <img src="images/new2.gif" alt="" height="11" width="28"></a></li>-->		
 					</ul>
 					</div>  
-					<b>Material em Python:</b> 
+					<b>Material:</b> 
 					<div>
 						<ul>	
-						<li><i class="icon-book"></i><a href="aulas/poo/backes/AulaPython01-IntroducaoAComputacao.pdf"> Aula 01 - Introdução à Computação</a> <!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=6qpBMmhfENM"> Ver Videoaula </a>)--></li>
-						<li><i class="icon-book"></i><a href="aulas/poo/backes/AulaPython02-AlgoritmosFluxogramas.pdf"> Aula 02 - Algoritmos e Fluxogramas</a> <!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=GLUkBt89dZ4"> Ver Videoaula </a>)--></li>
-						<li><i class="icon-book"></i><a href="aulas/poo/backes/AulaPython03-VariaveisExpressoes.pdf"> Aula 03 - Variáveis e Expressões</a> <!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=QaVzmIoUP1Q"> Ver Videoaula </a>)--></li>
-						<li><i class="icon-book"></i><a href="aulas/poo/backes/AulaPython04-Condicional.pdf"> Aula 04 - Comandos Condicionais</a> <!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=4p1n7CU-8Nw"> Ver Videoaula </a>)--></li>
-						<li><i class="icon-book"></i><a href="aulas/poo/backes/AulaPython05-Repeticao.pdf"> Aula 05 - Comandos de Repetição</a> <!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=MRGMFrZ81I4"> Ver Videoaula </a>)--></li>
-						<li><i class="icon-book"></i><a href="aulas/poo/backes/AulaPython06-Listas_Tuplas_Dicionarios.pdf"> Aula 06 - Listas, Tuplas e Dicionários</a> <!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=zzf1nK0Jsmg"> Ver Videoaula </a>)--></li>
-						<li><i class="icon-book"></i><a href="aulas/poo/backes/AulaPython07-Strings.pdf"> Aula 07 - Strings</a> <!--<img src="images/new2.gif" alt="" height="11" width="28"><!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=ucglUvY9Qew"> Ver Videoaula </a>)--></li>
-						<li><i class="icon-book"></i><a href="aulas/poo/backes/AulaPython08-Funcoes.pdf"> Aula 08 - Funções</a> <!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=ucglUvY9Qew"> Ver Videoaula </a>)--></li> 
-						<li><i class="icon-book"></i><a href="aulas/poo/backes/AulaPython09-Arquivos.pdf"> Aula 09 - Arquivos</a> <!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=ucglUvY9Qew"> Ver Videoaula </a>)--></li> 
-						<li><i class="icon-book"></i><a href="aulas/poo/backes/AulaPython10-Classes.pdf"> Aula 10 - Classes</a> <!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=ucglUvY9Qew"> Ver Videoaula </a>)--></li> 
+						<li><i class="icon-book"></i><a href="aulas/poo/backes/AulaPython01-IntroducaoAComputacao.pptx"> Aula 01 - Introdução à Computação</a> <!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=6qpBMmhfENM"> Ver Videoaula </a>)--></li>
+						<li><i class="icon-book"></i><a href="aulas/poo/backes/AulaPython02-AlgoritmosFluxogramas.pptx"> Aula 02 - Algoritmos e Fluxogramas</a> <!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=GLUkBt89dZ4"> Ver Videoaula </a>)--></li>
+						<li><i class="icon-book"></i><a href="aulas/poo/backes/AulaPython03-VariaveisExpressoes.pptx"> Aula 03 - Variáveis e Expressões</a> <!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=QaVzmIoUP1Q"> Ver Videoaula </a>)--></li>
+						<li><i class="icon-book"></i><a href="aulas/poo/backes/AulaPython04-Condicional.pptx"> Aula 04 - Comandos Condicionais</a> <!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=4p1n7CU-8Nw"> Ver Videoaula </a>)--></li>
+						<li><i class="icon-book"></i><a href="aulas/poo/backes/AulaPython05-Repeticao.pptx"> Aula 05 - Comandos de Repetição</a> <!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=MRGMFrZ81I4"> Ver Videoaula </a>)--></li>
+						<li><i class="icon-book"></i><a href="aulas/poo/backes/AulaPython06-Listas_Tuplas_Dicionarios.pptx"> Aula 06 - Listas, Tuplas e Dicionários</a> <!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=zzf1nK0Jsmg"> Ver Videoaula </a>)--></li>
+						<li><i class="icon-book"></i><a href="aulas/poo/backes/AulaPython07-Strings.pptx"> Aula 07 - Strings</a> <!--<img src="images/new2.gif" alt="" height="11" width="28"><!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=ucglUvY9Qew"> Ver Videoaula </a>)--></li>
+						<li><i class="icon-book"></i><a href="aulas/poo/backes/AulaPython08-Funcoes.pptx"> Aula 08 - Funções</a> <!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=ucglUvY9Qew"> Ver Videoaula </a>)--></li> 
+						<li><i class="icon-book"></i><a href="aulas/poo/backes/AulaPython09-Arquivos.pptx"> Aula 09 - Arquivos</a> <!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=ucglUvY9Qew"> Ver Videoaula </a>)--></li> 
+						<li><i class="icon-book"></i><a href="aulas/poo/backes/AulaPython10-Classes.pptx"> Aula 10 - Classes</a> <!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=ucglUvY9Qew"> Ver Videoaula </a>)--></li> 
 						<!--<li><i class="icon-book"></i><a href="aulas/poo/11.idiomas-programacao.pptx"> Aula 11 - Idiomas de Programação </a> <!--<img src="images/new2.gif" alt="" height="11" width="28"><!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=CRl9WpDKj0I"> Ver Videoaula </a>)--></li>
 						<!--<li><i class="icon-book"></i><a href="aulas/poo/12.Noções de UML.ppt"> Aula 12 - Noções de UML</a> <!--<img src="images/new2.gif" alt="" height="11" width="28"><!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=L3YnzEmse2Q&t=88s"> Ver Videoaula </a>)--></li>	
 						</ul>
 					</div> 
-					<!-- <div>
-					<b>Videoaulas:</b> 
-					<ul>
-					<li><img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=aR7CKNFECx0&list=PLHz_AreHm4dkqe2aR0tQK74m8SFe-aGsY&index=3"> O que é um Objeto? </a></li>
-					<!-- <li><img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=wNaoX6VOj54&list=PLHz_AreHm4dkqe2aR0tQK74m8SFe-aGsY&index=4"> Criando Classes e Objetos em Java </a></li>
-					<li><img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=jFI-qqitzwk&list=PLHz_AreHm4dkqe2aR0tQK74m8SFe-aGsY&index=6"> O que é Visibilidade em um Objeto? </a></li>
-					<li><img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=LV2243j4RTQ&list=PLHz_AreHm4dkqe2aR0tQK74m8SFe-aGsY&index=7"> Configurando Visibilidade de Atributos e Métodos </a></li>
-					<li><img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=g2x9oyBFSco&list=PLHz_AreHm4dkqe2aR0tQK74m8SFe-aGsY&index=8"> Métodos Especiais </a></li>
-					<li><img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=6i-_R5cAcEc&list=PLHz_AreHm4dkqe2aR0tQK74m8SFe-aGsY&index=9"> Métodos Getter, Setter e Construtor </a></li> 
-					<li><img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=_PZldwo0vVo&list=PLHz_AreHm4dkqe2aR0tQK74m8SFe-aGsY&index=20"> Herança </a></li>
-					<li><img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=He887D2WGVw&list=PLHz_AreHm4dkqe2aR0tQK74m8SFe-aGsY&index=22"> Mais sobre Herança... </a></li>
-					<li><img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=6uLLfRNgRA4"> Interfaces </a></li> 
-					<li><img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/YN0J16sS-pQ"> Classes Abstratas, Interfaces e Coleções</a></li>
-					<li><img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=NctjqlfKC0U&list=PLHz_AreHm4dkqe2aR0tQK74m8SFe-aGsY&index=25"> Polimorfismo em Java </a> <img src="images/new2.gif" alt="" height="11" width="28"></li>
-					<li><img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=hYek1xqWzgs&list=PLHz_AreHm4dkqe2aR0tQK74m8SFe-aGsY&index=26"> Conceito de Polimorfismo </a> <img src="images/new2.gif" alt="" height="11" width="28"></li>
-					<li><img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=b7xGYh3NHZU&list=PLHz_AreHm4dkqe2aR0tQK74m8SFe-aGsY&index=27"> Polimorfismo e Sobrecarga </a> <img src="images/new2.gif" alt="" height="11" width="28"></li>
-					<!--<li><img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=CRl9WpDKj0I"> Idiomas de Programação </a> <img src="images/new2.gif" alt="" height="11" width="28"></li>
-					<li><img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=L3YnzEmse2Q&t=88s"> UML em 42 minutos </a> <img src="images/new2.gif" alt="" height="11" width="28"></li> 
-					</ul>
-					</div> --> 
 					<!--<div>
 					<b>Links diversos:</b>
 					<ul>
 					<li><i class="icon-book"></i><a href="https://drive.google.com/open?id=1bk_GlO6hMw9xxn1XbF60MC7H2k8AnCW2"> <img src="images/new2.gif" alt="" height="11" width="28"> <i>Livro: Java Como Programar 6ª edição (Deitel)</i></a></li> 
-					<li><i class="icon-book"></i><a href="aulas/poo/gabarito_prova3_pc2.txt"> <img src="images/new2.gif" alt="" height="11" width="28"> <b>Gabarito da Prova 3</b></a></button></li> 
-					<li><i class="icon-book"></i><a href="aulas/poo/notas_pc2_cefet_2020.pdf"> Notas da Prova 1 </a></li> 
 					<li><i class="icon-book"></i><a href="aulas/poo/lista1_pc2.pdf"> Lista 01 (Entrega: <b>23/03</b>) <img src="images/deadline.png" alt="" height="25" width="19"></a></li> 
 					<li><i class="icon-book"></i><a href="aulas/poo/lista2_pc2.pdf"> Lista 02 (Entrega: <b>13/04</b>) <img src="images/new2.gif" alt="" height="11" width="28"></a></li> 
 					</ul>
