planos didaticos de lab. pc2 e guia python

--- a/poo-lab-python.html
+++ b/poo-lab-python.html
@@ -77,15 +77,14 @@
 			<div class="fh5co-post"> 
 				<div class="fh5co-entry padding">
 					<!--<h2>- Haverá apresentação do trabalho 3 no dia 01/12!</h2>-->
-					<!--<div>
+					<div>
 					<b>Plano e Material extra:</b>
 					<ul>
-					<li><i class="icon-book"></i><a href="aulas/lab-poo/Plano Didático - PC2_LAB - T03.pdf"> Plano Didático - Turma 03 <img src="images/new2.gif" alt="" height="11" width="28"></a></li>
-					<li><i class="icon-book"></i><a href="aulas/lab-poo/Plano Didático - PC2_LAB - T04.pdf"> Plano Didático - Turma 04 <img src="images/new2.gif" alt="" height="11" width="28"></a></li>
-					<li><i class="icon-book"></i><a href="aulas/lab-poo/caelum_java.pdf"> Apostila Caelum Java <img src="images/new2.gif" alt="" height="11" width="28"></a></li>
-					<li><i class="icon-book"></i><a href="http://www.decom.ufop.br/romildo/bcc221.2011-1/slides/cap14.pdf"> <i>Livro: Java Como Programar 8ª edição (Deitel)</i></a> <img src="images/new2.gif" alt="" height="11" width="28"></li>
+					<li><i class="icon-book"></i><a href="aulas/lab-poo/python/Plano-Didático-Lab. PC2-2024.1 - Turma 03.pdf"> Plano Didático - Turma 03 <img src="images/new2.gif" alt="" height="11" width="28"></a></li>
+					<li><i class="icon-book"></i><a href="aulas/lab-poo/python/Plano-Didático-Lab. PC2-2024.1 - Turma 04.pdf"> Plano Didático - Turma 04 <img src="images/new2.gif" alt="" height="11" width="28"></a></li>
+					<li><i class="icon-book"></i><a href="aulas/lab-poo/python/AprendendoPython-Guia.pdf"> Aprendendo Python - um guia básico de programação <img src="images/new2.gif" alt="" height="11" width="28"></a></li>
 					</ul>
-					</div>-->
+					</div>
 					<!--<div>
 					<b>Grupos dos Trabalhos e Roteiros:</b>
 					<ul>
