--- a/gsi526.html
+++ b/gsi526.html
@@ -99,7 +99,7 @@
 					<div>
 						<b>Material:</b>  
 						<ul> 
-						<li><i class="icon-book"></i><a href="aulas/gsi526/aula1-introducao.pptx"> Aula 01 - Introdução à Engenharia de Software</a></button>  <!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=BgoylssTeRs"> Ver Videoaula </a>)--></li>
+						<li><i class="icon-book"></i><a href="aulas/gsi526/aula1-plano_do_curso.pptx"> Aula 01 - Apresentação da disciplina</a></button>  <!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=BgoylssTeRs"> Ver Videoaula </a>)--></li>
 						<!--<li><i class="icon-book"></i><a href="aulas/gsi526/aula2-sistemas_criticos.pdf"> Aula 02 - Sistemas críticos</a></button>--></li>
 						<!--<li><i class="icon-book"></i><a href="aulas/gsi526/aula3-gerencia_de_projetos.pdf"> Aula 03 - Gerência de projetos</a></button>--></li>
 						<!--<li><i class="icon-book"></i><a href="aulas/gsi526/aula4-openUp.pdf"> Aula 04 - OpenUp</a></button>--></li>
