Add o trabalho 1 de Lab. PC2 + Aulas desta semana de ES + PC2 e Lab. PC2

--- a/poo-lab-python.html
+++ b/poo-lab-python.html
@@ -102,7 +102,7 @@
 					<div>
 					<b>Avaliação:</b>
 					<ul>
-					<li>Trabalho 1 - 30 pts <b>(19/04)</b> <!--<a href="aulas/lab-poo/trabalhos/Trabalho1-PC2.pdf"> - <i> Especificação </i> <img src="images/deadline.png" alt="" height="25" width="19"></a>--></li>
+					<li>Trabalho 1 - 30 pts <b>(19/04)</b> <a href="aulas/lab-poo/trabalhos/Trabalho1-PC2.pdf"> - <i> Especificação </i> <img src="images/new2.gif" alt="" height="11" width="28"></a></li>
 					<li>Trabalho 2 - 30 pts <b>(24/05)</b> <!--<a href="aulas/lab-poo/trabalhos/Trabalho2-PC2.pdf"> - <i> Especificação </i> <img src="images/deadline.png" alt="" height="25" width="19"></a>--></li>
 					<li>Trabalho 3 - 30 pts <b>(05/07)</b> <!--<a href="aulas/lab-poo/trabalhos/Trabalho3-PC2.pdf"> - <i> Especificação </i> <img src="images/new2.gif" alt="" height="11" width="28"></a>--></li>
 					<li>Exercícios Práticos - 10 pts <b>(07/06)</b> <!-- - Ex. 2, Ex. 3, Ex. 5 e Ex. 8<!--<a href="aulas/lab-poo/notas_exercicios.pdf"> - <i> Notas </i> <img src="images/new2.gif" alt="" height="11" width="28"></a>--></li>
@@ -116,7 +116,7 @@
 					<b>Material:</b> 
 					<ul>						
 					<li><i class="icon-book"></i><a href="aulas/lab-poo/python/Prática 1.pdf"> Exercício Prático 1</a></li>
-					<!--<li><i class="icon-book"></i><a href="aulas/lab-poo/python/Prática 2.pdf"> Exercício Prático 2</a>--></li>			
+					<li><i class="icon-book"></i><a href="aulas/lab-poo/python/Prática 2.pdf"> Exercício Prático 2</a></li>			
 					<!--<li><i class="icon-book"></i><a href="aulas/lab-poo/python/Prática 3.pdf"> Exercício Prático 3</a>--></li>
 					<!--<li><i class="icon-book"></i><a href="aulas/lab-poo/python/Prática 4.pdf"> Exercício Prático 4</a>--></li>
 					<!--<li><i class="icon-book"></i><a href="aulas/lab-poo/python/Prática 5.pdf"> Exercício Prático 5</a>--></li>
