--- a/gsi526.html
+++ b/gsi526.html
@@ -102,7 +102,7 @@
 						<li><i class="icon-book"></i><a href="aulas/gsi526/aula1-plano_do_curso.pptx"> Aula 01 - Apresentação da disciplina</a></button>  <!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=BgoylssTeRs"> Ver Videoaula </a>)--></li>
 						<li><i class="icon-book"></i><a href="aulas/gsi526/aula2-sistemas_criticos.pdf"> Aula 02 - Sistemas críticos</a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/gsi526/aula3-processos.pptx"> Aula 03 - Processos</a></button></li>
-						<!--<li><i class="icon-book"></i><a href="aulas/gsi526/aula4-openUp.pdf"> Aula 04 - OpenUp</a></button>--></li>
+						<li><i class="icon-book"></i><a href="aulas/gsi526/aula4-openUp.pdf"> Aula 04 - OpenUp</a></button></li>
 						<!--<li><i class="icon-book"></i><a href="aulas/gsi526/aula5-smells.pptx"> Aula 05 - Reengenharia, Refatoração e Bad Smells</a></button>  <!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=cllmxcVXpzc"> Ver Videoaula </a>)--></li>
 						<!--<li><i class="icon-book"></i><a href="aulas/gsi526/aula6-reuso.pptx"> Aula 06 - Reuso de Software</a></button> <!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=QnfHYobvDg8"> Ver Videoaula </a>)--></li>
 						<!--<li><i class="icon-book"></i><a href="aulas/gsi526/aula7-linha-de-produtos.pptx"> Aula 07 - Linha de Produtos de Software</a></button> ( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/rBCYVuu5zVc"> Ver Videoaula </a>)--></li>
