Aula sobre Matplotlib e Numpy em Python

--- a/poo-python.html
+++ b/poo-python.html
@@ -108,7 +108,9 @@
 						<!--<li><i class="icon-book"></i><a href="aulas/poo/backes/AulaPython09-Arquivos.pptx"> Aula 09 - Arquivos</a> <!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=ucglUvY9Qew"> Ver Videoaula </a>)--></li> 
 						<!--<li><i class="icon-book"></i><a href="aulas/poo/backes/AulaPython10-Classes.pptx"> Aula 10 - Classes</a> <!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=ucglUvY9Qew"> Ver Videoaula </a>)--></li> 
 						<!--<li><i class="icon-book"></i><a href="aulas/poo/backes/AulaPython11-Heranca_e_Excecoes.ppt"> Aula 11 - Herança </a> <!--<img src="images/new2.gif" alt="" height="11" width="28"><!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=CRl9WpDKj0I"> Ver Videoaula </a>)--></li>
-						<!--<li><i class="icon-book"></i><a href="aulas/poo/backes/AulaPython11-Heranca_e_Excecoes.ppt"> Aula 12 - Exceções </a> <!--<img src="images/new2.gif" alt="" height="11" width="28"><!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=CRl9WpDKj0I"> Ver Videoaula </a>)--></li>
+						<!--<li><i class="icon-book"></i><a href="aulas/poo/backes/AulaPython11-Heranca_e_Excecoes.ppt"> Aula 11 - Exceções </a> <!--<img src="images/new2.gif" alt="" height="11" width="28"><!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=CRl9WpDKj0I"> Ver Videoaula </a>)--></li>
+						<!--<li><i class="icon-book"></i><a href="aulas/poo/backes/AulaPython12-Matplotlib.pdf"> Aula 12 - Matplotlib </a> <!--<img src="images/new2.gif" alt="" height="11" width="28">--></li>
+						<!--<li><i class="icon-book"></i><a href="aulas/poo/backes/AulaPython13-Numpy.pdf"> Aula 13 - Numpy </a> <!--<img src="images/new2.gif" alt="" height="11" width="28">--></li>
 						</ul>
 					</div> 
 					<!--<div>
