--- a/material.html
+++ b/material.html
@@ -69,7 +69,7 @@
 			<div class="page-title">
 				<img src="images/person_1.jpg" alt="Free HTML5 by FreeHTMl5.co">
 				<!--<span>November 10, 2017</span>-->
-				<h2>Disciplinas 1º Semestre de 2024 <br>CEFET-MG</h2>
+				<h2>Disciplinas 1º Semestre de 2024 (Após a greve) <br>CEFET-MG</h2>
 				<!--<span>Prof. Dr. Eduardo Cunha Campos</span>-->
 			</div>
 		</div>
