Datas de provas e trabalhos atualizados

--- a/poo-lab-python.html
+++ b/poo-lab-python.html
@@ -78,10 +78,10 @@
 				<div class="fh5co-entry padding">
 					<!--<h2>- Haverá apresentação do trabalho 3 no dia 01/12!</h2>-->
 					<div>
-					<b>Plano e Material extra:</b>
+					<b>Livro:</b>
 					<ul>
-					<li><i class="icon-book"></i><a href="aulas/lab-poo/python/Plano-Didático-Lab. PC2-2024.1 - Turma 03.pdf"> Plano Didático - Turma 03 <img src="images/new2.gif" alt="" height="11" width="28"></a></li>
-					<li><i class="icon-book"></i><a href="aulas/lab-poo/python/Plano-Didático-Lab. PC2-2024.1 - Turma 04.pdf"> Plano Didático - Turma 04 <img src="images/new2.gif" alt="" height="11" width="28"></a></li>
+					<!--<li><i class="icon-book"></i><a href="aulas/lab-poo/python/Plano-Didático-Lab. PC2-2024.1 - Turma 03.pdf"> Plano Didático - Turma 03 <img src="images/new2.gif" alt="" height="11" width="28"></a>--></li>
+					<!--<li><i class="icon-book"></i><a href="aulas/lab-poo/python/Plano-Didático-Lab. PC2-2024.1 - Turma 04.pdf"> Plano Didático - Turma 04 <img src="images/new2.gif" alt="" height="11" width="28"></a>--></li>
 					<li><i class="icon-book"></i><a href="aulas/lab-poo/python/AprendendoPython-Guia.pdf"> Aprendendo Python - um guia básico de programação <img src="images/new2.gif" alt="" height="11" width="28"></a></li>
 					</ul>
 					</div>
@@ -102,10 +102,10 @@
 					<div>
 					<b>Avaliação:</b>
 					<ul>
-					<li>Trabalho 1 - 30 pts <b>(19/04)</b> <a href="aulas/lab-poo/trabalhos/Trabalho1-PC2.pdf"> - <i> Especificação </i> <img src="images/new2.gif" alt="" height="11" width="28"></a></li>
-					<li>Trabalho 2 - 30 pts <b>(24/05)</b> <!--<a href="aulas/lab-poo/trabalhos/Trabalho2-PC2.pdf"> - <i> Especificação </i> <img src="images/deadline.png" alt="" height="25" width="19"></a>--></li>
-					<li>Trabalho 3 - 30 pts <b>(05/07)</b> <!--<a href="aulas/lab-poo/trabalhos/Trabalho3-PC2.pdf"> - <i> Especificação </i> <img src="images/new2.gif" alt="" height="11" width="28"></a>--></li>
-					<li>Exercícios Práticos - 10 pts <b>(07/06)</b> <!-- - Ex. 2, Ex. 3, Ex. 5 e Ex. 8<!--<a href="aulas/lab-poo/notas_exercicios.pdf"> - <i> Notas </i> <img src="images/new2.gif" alt="" height="11" width="28"></a>--></li>
+					<li>Trabalho 1 - 30 pts <b>(19/07)</b> <a href="aulas/lab-poo/trabalhos/Trabalho1-PC2.pdf"> - <i> Especificação </i> <img src="images/new2.gif" alt="" height="11" width="28"></a></li>
+					<li>Trabalho 2 - 30 pts <b>(23/08)</b> <!--<a href="aulas/lab-poo/trabalhos/Trabalho2-PC2.pdf"> - <i> Especificação </i> <img src="images/deadline.png" alt="" height="25" width="19"></a>--></li>
+					<li>Trabalho 3 - 30 pts <b>(13/09)</b> <!--<a href="aulas/lab-poo/trabalhos/Trabalho3-PC2.pdf"> - <i> Especificação </i> <img src="images/new2.gif" alt="" height="11" width="28"></a>--></li>
+					<li>Exercícios Práticos - 10 pts <b>(06/09)</b> <!-- - Ex. 2, Ex. 3, Ex. 5 e Ex. 8<!--<a href="aulas/lab-poo/notas_exercicios.pdf"> - <i> Notas </i> <img src="images/new2.gif" alt="" height="11" width="28"></a>--></li>
 					<!--<li>Trabalho 1 - 30 pts <b>(Entrega: 18/02)</b> <a href="aulas/lab-poo/Trabalho1-PC2.pdf"> - <i> Especificação </i> <img src="images/deadline.png" alt="" height="25" width="19"></a></li> 
 					<li>Trabalho 2 - 30 pts <b>(Entrega: 18/03)</b> <a href="aulas/lab-poo/Trabalho2-PC2.pdf"> - <i> Especificação </i> <img src="images/new2.gif" alt="" height="11" width="28"></a></li> 
 					<li>Trabalho 3 - 30 pts <b>(Entrega: 08/04)</b> <a href="aulas/lab-poo/Trabalho3-PC2.pdf"> - <i> Especificação </i> <img src="images/new2.gif" alt="" height="11" width="28"></a></li> 
@@ -120,7 +120,7 @@
 					<li><i class="icon-book"></i><a href="aulas/lab-poo/python/Prática 3.pdf"> Exercício Prático 3</a></li>
 					<li><i class="icon-book"></i><a href="aulas/lab-poo/python/Prática 4.pdf"> Exercício Prático 4</a></li>
 					<li><i class="icon-book"></i><a href="aulas/lab-poo/python/Prática 5.pdf"> Exercício Prático 5</a></li>
-					<!--<li><i class="icon-book"></i><a href="aulas/lab-poo/python/Prática 6.pdf"> Exercício Prático 6</a>--></li>
+					<li><i class="icon-book"></i><a href="aulas/lab-poo/python/Prática 6.pdf"> Exercício Prático 6</a></li>
 					<!--<li><i class="icon-book"></i><a href="aulas/lab-poo/python/Prática 7.pdf"> Exercício Prático 7</a>--></li>
 					<!--<li><i class="icon-book"></i><a href="aulas/lab-poo/python/Prática 8.pdf"> Exercício Prático 8</a>--></li>
 					<!--<li><i class="icon-book"></i><a href="aulas/lab-poo/python/Prática 9.pdf"> Exercício Prático 9</a>--></li>
