--- a/gsi526-lab.html
+++ b/gsi526-lab.html
@@ -184,9 +184,9 @@
 					<ul>
 					<!--<li><a href="https://www.eclipse.org/downloads/packages/release/mars/2/eclipse-ide-java-ee-developers" target="_blank">Link do Eclipse IDE Mars 2</a></li>
 					<li><a href="http://www.gwtproject.org/doc/latest/DevGuideCodingBasicsClient.html" target="_blank">Onde aprender tudo sobre o framework Web GWT?</a></li>
-					<li><a href= "http://samples.gwtproject.org/samples/Showcase/Showcase.html#!CwCheckBox" target="_blank">GWT Showcase of Features</a></li>-->
+					<li><a href= "http://samples.gwtproject.org/samples/Showcase/Showcase.html#!CwCheckBox" target="_blank">GWT Showcase of Features</a></li>
 					<li><i class="icon-folder"></i><a href="aulas/lab-programacao/PortariaPredio.zip"> Sistema de Portaria de Prédio</a></li>
-					<li><i class="icon-folder"></i><a href="aulas/lab-programacao/EmpresaFuncionarios.zip"> Sistema de Tipos de Funcionários</a></li>
+					<li><i class="icon-folder"></i><a href="aulas/lab-programacao/EmpresaFuncionarios.zip"> Sistema de Tipos de Funcionários</a></li>-->
 					<li><i class="icon-folder"></i><a href="aulas/lab-programacao/HelloWorld.zip"> Hello World GWT Application</a></li>
 					<li><i class="icon-folder"></i><a href="aulas/lab-programacao/imc.zip"> IMC GWT Application</a></li>
 					<li><i class="icon-folder"></i><a href="aulas/lab-programacao/StockWatcher.zip"> StockWatcher GWT Application</a></li>
