Aula sobre Excecoes, Polimorfismo e Heranca em Python

--- a/poo-python.html
+++ b/poo-python.html
@@ -107,10 +107,10 @@
 						<li><i class="icon-book"></i><a href="aulas/poo/backes/AulaPython08-Funcoes.pptx"> Aula 08 - Funções</a> <!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=ucglUvY9Qew"> Ver Videoaula </a>)--></li> 
 						<li><i class="icon-book"></i><a href="aulas/poo/backes/AulaPython09-Arquivos.pptx"> Aula 09 - Arquivos</a> <!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=ucglUvY9Qew"> Ver Videoaula </a>)--></li> 
 						<li><i class="icon-book"></i><a href="aulas/poo/backes/AulaPython10-Classes.pptx"> Aula 10 - Classes</a> <!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=ucglUvY9Qew"> Ver Videoaula </a>)--></li> 
-						<li><i class="icon-book"></i><a href="aulas/poo/backes/AulaPython11-Heranca_e_Excecoes.ppt"> Aula 11 - Herança </a> <!--<img src="images/new2.gif" alt="" height="11" width="28"><!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=CRl9WpDKj0I"> Ver Videoaula </a>)--></li>
-						<!--<li><i class="icon-book"></i><a href="aulas/poo/backes/AulaPython11-Heranca_e_Excecoes.ppt"> Aula 11 - Exceções </a> <!--<img src="images/new2.gif" alt="" height="11" width="28"><!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=CRl9WpDKj0I"> Ver Videoaula </a>)--></li>
-						<!--<li><i class="icon-book"></i><a href="aulas/poo/backes/AulaPython12-Matplotlib.pdf"> Aula 12 - Matplotlib </a> <!--<img src="images/new2.gif" alt="" height="11" width="28">--></li>
-						<!--<li><i class="icon-book"></i><a href="aulas/poo/backes/AulaPython13-Numpy.pdf"> Aula 13 - Numpy </a> <!--<img src="images/new2.gif" alt="" height="11" width="28">--></li>
+						<li><i class="icon-book"></i><a href="aulas/poo/backes/AulaPython11-Heranca_e_Polimorfismo.pptx"> Aula 11 - Herança e Polimorfismo </a> <!--<img src="images/new2.gif" alt="" height="11" width="28"><!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=CRl9WpDKj0I"> Ver Videoaula </a>)--></li>
+						<!--<li><i class="icon-book"></i><a href="aulas/poo/backes/AulaPython12-Tratamento_de_Excecoes.pptx"> Aula 12 - Tratamento de Exceções </a> <!--<img src="images/new2.gif" alt="" height="11" width="28"><!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=CRl9WpDKj0I"> Ver Videoaula </a>)--></li>
+						<!--<li><i class="icon-book"></i><a href="aulas/poo/backes/AulaPython13-Matplotlib.pdf"> Aula 13 - Matplotlib </a> <!--<img src="images/new2.gif" alt="" height="11" width="28">--></li>
+						<!--<li><i class="icon-book"></i><a href="aulas/poo/backes/AulaPython14-Numpy.pdf"> Aula 14 - Numpy </a> <!--<img src="images/new2.gif" alt="" height="11" width="28">--></li>
 						</ul>
 					</div> 
 					<!--<div>
