TCCs do Alexandre Roque, Luiz Victor e Ronaldo Zica

--- a/index.html
+++ b/index.html
@@ -99,6 +99,28 @@
 		</div>
 		<div id="fh5co-main-content">
 				<div class="fh5co-post">
+				
+				<div class="fh5co-entry padding">
+					<img src="images/project-5.jpg" alt="Free HTML5 Bootstrap Template by FreeHTML5.co">
+					<div>
+						<span class="fh5co-post-date">September 06, 2024</span>
+						<h2><a href="papers/Ronaldo_Zica_comentarios-Eduardo.pdf">TCC Ronaldo Zica - Comentários</a></h2>	
+					</div>
+				</div>
+				<div class="fh5co-entry padding">
+					<img src="images/project-5.jpg" alt="Free HTML5 Bootstrap Template by FreeHTML5.co">
+					<div>
+						<span class="fh5co-post-date">September 06, 2024</span>
+						<h2><a href="papers/Alexandre_Roque_comentarios-Eduardo.pdf">TCC Alexandre Roque - Comentários</a></h2>	
+					</div>
+				</div>
+				<div class="fh5co-entry padding">
+					<img src="images/project-5.jpg" alt="Free HTML5 Bootstrap Template by FreeHTML5.co">
+					<div>
+						<span class="fh5co-post-date">September 05, 2024</span>
+						<h2><a href="papers/Luiz_Victor_comentarios-Eduardo.pdf">TCC Luiz Victor - Comentários</a></h2>	
+					</div>
+				</div>
 				<div class="fh5co-entry padding">
 					<img src="images/project-5.jpg" alt="Free HTML5 Bootstrap Template by FreeHTML5.co">
 					<div>
